<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_key_press">Key press</string>
    <string name="settings_screen_appearance">Appearance</string>
    <string name="settings_screen_advanced">Advanced settings</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="version">Version</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%d</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="auto_period">Double-space period</string>
    <string name="auto_period_summary">Double tapping spacebar inserts a period followed by a space</string>
    <string name="auto_strip_punctuation_space">Auto-strip space before punctuation</string>
    <string name="auto_strip_punctuation_space_summary">Automatically remove space before punctuation marks like period or comma</string>
    <string name="select_language">Languages</string>
    <string name="select_language_description" translatable="false">en_US:qwerty;en_US:qwertz;de:qwertz</string>
    <string name="locale_name_en_GB">English (UK)</string>
    <string name="locale_name_en_US">English (US)</string>
    <string name="locale_name_es_US">Spanish (US)</string>
    <string name="locale_name_hi_ZZ">Hinglish</string>
    <string name="locale_name_sr_ZZ">Serbian (Latin)</string>
    <string name="subtype_generic_layout"><xliff:g id="LANGUAGE_NAME" example="English (US)">%1$s</xliff:g> (<xliff:g id="LAYOUT" example="QWERTY">%2$s</xliff:g>)</string>
    <string name="keyboard_theme_dark">Material Dark</string>
    <string name="keyboard_theme_light">Material Light</string>
    <string name="keyboard_theme_system">System Default</string>
    <string name="keyboard_theme_black">AMOLED Black</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <string name="prefs_key_longpress_timeout_settings">Key long press delay</string>
    <string name="button_default">Default</string>
    <string translatable="false" name="abbreviation_unit_percent"><xliff:g id="PERCENTS">%d</xliff:g>%%</string>
    <string translatable="false" name="abbreviation_unit_dp"><xliff:g id="DENSITY_INDEPENDENT_PIXELS">%d</xliff:g> dp</string>
    <string name="prefs_keyboard_height_settings">Keyboard height</string>
    <string name="prefs_bottom_offset_portrait_settings">Bottom offset</string>
    <string name="prefs_bottom_offset_landscape_settings">Bottom offset (landscape)</string>
    <string name="settings_category_key_repeat">Key repeat &amp; deletion</string>
    <string name="prefs_key_repeat_start_timeout">Key repeat start delay</string>
    <string name="prefs_key_repeat_interval">Key repeat interval</string>
    <string name="settings_category_vibration">Haptic feedback</string>
    <string name="prefs_vibration_duration">Vibration duration</string>
    <string name="settings_category_popup_preview">Popup preview</string>
    <string name="prefs_key_preview_linger_timeout">Popup preview dismiss delay</string>
    <string name="settings_category_appearance_advanced">Display &amp; offsets</string>
    <string name="settings_category_clipboard_advanced">Clipboard limits</string>
    <string name="prefs_clipboard_max_clips">Maximum stored clips</string>
    <string name="unit_clips"><xliff:g id="CLIPS">%d</xliff:g> clips</string>
    <string name="show_special_chars">Show special characters</string>
    <string name="show_language_switch_key">Show language switch key</string>
    <string name="show_language_on_spacebar">Show language on spacebar</string>
    <string name="pref_use_on_screen">Show on-screen keyboard</string>
    <string name="pref_use_on_screen_summary">Show on-screen keyboard while using physical keyboard</string>
    <string name="pref_enable_ime_switch">Switch to other keyboards</string>
    <string name="disable_landscape_fullscreen">Disable fullscreen in landscape</string>
    <string name="disable_landscape_fullscreen_summary">Do not expand keyboard to full screen in landscape mode</string>
    <string name="show_number_row">Show separate number row</string>
    <string name="show_top_bar">Show three dots in top bar</string>
    <string name="space_swipe">Space swipe cursor move</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="swipe_sensitivity">Swipe sensitivity</string>
    <string-array name="swipe_sensitivity_entries">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>
    <string-array name="swipe_sensitivity_values" translatable="false">
        <item>0.6</item>
        <item>1.0</item>
        <item>1.5</item>
    </string-array>
    <string name="user_languages">Enabled keyboard languages</string>
    <string name="change_keyboard">Change keyboard</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="license">License</string>
    <string name="clipboard">Clipboard</string>
    <string name="clipboard_empty">Clipboard is empty</string>
    <string name="clipboard_empty_description">Items you copy will appear here</string>
    <string name="clipboard_clear_all">Clear unpinned items</string>
    <string name="clipboard_delete">Delete</string>
    <string name="clipboard_pin">Pin</string>
    <string name="clipboard_unpin">Unpin</string>
    <string name="clipboard_search">Search clipboard</string>
    <string name="clipboard_search_hint">Search clipboard\u2026</string>
    <string name="clipboard_search_empty">No matching items</string>
    <string name="clipboard_pin_limit_reached">Pinned items limit reached</string>
    <string name="clipboard_suggestions">Show clipboard suggestions</string>
    <string name="clipboard_suggestions_summary">Show recently copied items in suggestion bar</string>
    <string name="suggest_screenshots">Show screenshots in clipboard</string>
    <string name="suggest_screenshots_summary">Show recently taken screenshots in clipboard suggestions and history</string>
    <string name="image_pasting_not_supported">This app does not support pasting images</string>
    <string name="retention_time_minutes"><xliff:g id="MINUTES">%d</xliff:g> min</string>
    <string name="retention_time_hours"><xliff:g id="HOURS">%d</xliff:g> h</string>
    <string name="retention_time_hours_minutes"><xliff:g id="HOURS">%1$d</xliff:g> h <xliff:g id="MINUTES">%2$d</xliff:g> min</string>
    <string name="clipboard_history_retention_time">History retention time</string>
    <string name="key_shape">Key shape</string>
    <string-array name="key_shape_entries">
        <item>Rounded</item>
        <item>Rectangular</item>
        <item>Borderless</item>
    </string-array>
    <string-array name="key_shape_values" translatable="false">
        <item>rounded</item>
        <item>rectangular</item>
        <item>borderless</item>
    </string-array>
    <string name="show_suggestions">Show text suggestions</string>
    <string name="auto_correction_threshold">Auto-correction sensitivity</string>
    <string-array name="auto_correction_threshold_entries">
        <item>Off</item>
        <item>Modest</item>
        <item>Aggressive</item>
        <item>Very aggressive</item>
    </string-array>
    <string-array name="auto_correction_threshold_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="settings_screen_autocorrect">Text correction</string>
    <string name="settings_screen_clipboard">Clipboard</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_about_legal">About &amp; Legal</string>
    <string name="settings_category_keys_layout">Keys &amp; Layout</string>
    <string name="settings_category_gestures">Gestures</string>
    <string name="settings_category_typing">Typing</string>
    <string name="settings_category_correction">Correction</string>
    <string name="settings_category_theme_style">Theme &amp; Style</string>
    <string name="settings_category_dimensions">Dimensions</string>
    <string name="settings_category_feedback">Haptic &amp; Sound</string>
    <string name="settings_category_visual_timing">Visual &amp; Timing</string>
    <string name="settings_category_suggestions">Suggestions</string>
    <string name="settings_category_history">History</string>
    <string name="ime_not_enabled_title">Simple Keyboard is not enabled</string>
    <string name="ime_not_enabled_summary">Tap to enable it in system settings</string>
    <string name="ime_not_active_title">Simple Keyboard is not selected</string>
    <string name="ime_not_active_summary">Tap to choose it as your active keyboard</string>
    <string name="clipboard_enabled">Enable clipboard</string>
    <string name="clipboard_enabled_summary">Keep a history of copied items and suggestions</string>
    <string name="suggestions_in_urls">Show suggestions in URLs and emails</string>
    <string name="suggestions_in_urls_summary">Display word suggestions in address bars and email fields</string>
    <string name="forget_word_title">Forget word</string>
    <string name="forget_word_message">Do you want to forget \"%s\"?</string>
    <string name="settings_screen_dictionary">Dictionary</string>
    <string name="settings_category_dictionary">Dictionary</string>
    <string name="auto_learn">Auto-learn</string>
    <string name="auto_learn_summary">Save new words as you type</string>
    <string name="learned_words">Learned words</string>
    <string name="learned_words_summary_zero">No saved words</string>
    <string name="learned_words_summary_count">%d saved words</string>
    <string name="blocked_words">Blocked words</string>
    <string name="blocked_words_summary_zero">No blocked words</string>
    <string name="blocked_words_summary_count">%d blocked words</string>
    <string name="add_word">Add word</string>
    <string name="add_word_hint">Enter word</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_learned_words_title">Clear learned words</string>
    <string name="clear_learned_words_message">Are you sure you want to remove all learned words?</string>
    <string name="clear_blocked_words_title">Clear blocked words</string>
    <string name="clear_blocked_words_message">Are you sure you want to unblock all words?</string>
    <string name="unblock_word">Unblock</string>
    <string name="delete_word">Delete</string>
    <string name="search_words_hint">Search words…</string>
    <string name="no_learned_words">No learned words yet</string>
    <string name="no_blocked_words">No blocked words</string>
    <string name="word_added">Word added</string>
    <string name="word_already_exists">Word already exists</string>
    <string name="block_word">Block word</string>
    <string name="block_word_hint">Enter word to block</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="delete_selected">Delete selected</string>
    <string name="unblock_selected">Unblock selected</string>
    <string name="delete_word_confirm">Remove \"%s\"?</string>
    <string name="unblock_word_confirm">Unblock \"%s\"?</string>
    <string name="delete_selected_confirm">Remove %d selected words?</string>
    <string name="unblock_selected_confirm">Unblock %d selected words?</string>
    <string name="word_deleted">Word removed</string>
    <string name="word_unblocked">Word unblocked</string>
</resources>