<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_screen_preferences">

    <PreferenceCategory
        android:title="@string/settings_category_keys_layout">

        <SwitchPreferenceCompat
            android:key="pref_show_number_row"
            android:title="@string/show_number_row"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="pref_show_top_bar"
            android:title="@string/show_top_bar"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_show_special_chars"
            android:title="@string/show_special_chars"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_show_language_switch_key"
            android:title="@string/show_language_switch_key"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_show_language_on_spacebar"
            android:title="@string/show_language_on_spacebar"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_use_on_screen"
            android:title="@string/pref_use_on_screen"
            android:summary="@string/pref_use_on_screen_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="pref_enable_ime_switch"
            android:title="@string/pref_enable_ime_switch"
            app:dependency="pref_show_language_switch_key"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="pref_disable_landscape_fullscreen"
            android:title="@string/disable_landscape_fullscreen"
            android:summary="@string/disable_landscape_fullscreen_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="pref_suggestions_in_urls"
            android:title="@string/suggestions_in_urls"
            android:summary="@string/suggestions_in_urls_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_gestures">

        <SwitchPreferenceCompat
            android:key="pref_space_swipe"
            android:title="@string/space_swipe"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="pref_delete_swipe"
            android:title="@string/delete_swipe"
            android:defaultValue="false" />

        <ListPreference
            android:key="pref_swipe_sensitivity"
            android:title="@string/swipe_sensitivity"
            android:entries="@array/swipe_sensitivity_entries"
            android:entryValues="@array/swipe_sensitivity_values"
            android:defaultValue="1.0"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@layout/preference_chevron" />

    </PreferenceCategory>

</PreferenceScreen>
