<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_screen_autocorrect">

    <PreferenceCategory
        android:title="@string/settings_category_typing">

        <SwitchPreferenceCompat
            android:key="auto_cap"
            android:title="@string/auto_cap"
            android:summary="@string/auto_cap_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="auto_period"
            android:title="@string/auto_period"
            android:summary="@string/auto_period_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="auto_strip_punctuation_space"
            android:title="@string/auto_strip_punctuation_space"
            android:summary="@string/auto_strip_punctuation_space_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_show_suggestions"
            android:title="@string/show_suggestions"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_correction">

        <ListPreference
            android:key="auto_correction_threshold"
            android:title="@string/auto_correction_threshold"
            android:entries="@array/auto_correction_threshold_entries"
            android:entryValues="@array/auto_correction_threshold_values"
            android:defaultValue="1"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@layout/preference_chevron" />

    </PreferenceCategory>

</PreferenceScreen>
