<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="english_ime_settings">

    <rkr.simplekeyboard.inputmethod.latin.settings.ImeBannerPreference
        android:key="ime_not_active_banner"
        android:title="@string/ime_not_active_title"
        android:summary="@string/ime_not_active_summary" />



    <PreferenceCategory
        android:title="@string/settings_category_general">


        <Preference
            android:key="select_language"
            android:title="@string/select_language"
            android:icon="@drawable/ic_language"
            app:iconTint="?attr/colorOnSurfaceVariant"
            android:fragment="rkr.simplekeyboard.inputmethod.latin.settings.LanguagesSettingsFragment"
            app:widgetLayout="@layout/preference_chevron" />

        <Preference
            android:key="screen_preferences"
            android:title="@string/settings_screen_preferences"
            android:icon="@drawable/ic_tune"
            app:iconTint="?attr/colorOnSurfaceVariant"
            android:fragment="rkr.simplekeyboard.inputmethod.latin.settings.PreferencesSettingsFragment"
            app:widgetLayout="@layout/preference_chevron" />

        <Preference
            android:key="screen_autocorrect"
            android:title="@string/settings_screen_autocorrect"
            android:icon="@drawable/ic_spellcheck"
            app:iconTint="?attr/colorOnSurfaceVariant"
            android:fragment="rkr.simplekeyboard.inputmethod.latin.settings.AutocorrectSettingsFragment"
            app:widgetLayout="@layout/preference_chevron" />

        <Preference
            android:key="screen_dictionary"
            android:title="@string/settings_screen_dictionary"
            android:icon="@drawable/ic_dictionary"
            app:iconTint="?attr/colorOnSurfaceVariant"
            android:fragment="rkr.simplekeyboard.inputmethod.latin.settings.DictionarySettingsFragment"
            app:widgetLayout="@layout/preference_chevron" />

        <Preference
            android:key="screen_clipboard"
            android:title="@string/settings_screen_clipboard"
            android:icon="@drawable/ic_content_paste"
            app:iconTint="?attr/colorOnSurfaceVariant"
            android:fragment="rkr.simplekeyboard.inputmethod.latin.settings.ClipboardSettingsFragment"
            app:widgetLayout="@layout/preference_chevron" />

        <Preference
            android:key="screen_key_press"
            android:title="@string/settings_screen_key_press"
            android:icon="@drawable/ic_keyboard"
            app:iconTint="?attr/colorOnSurfaceVariant"
            android:fragment="rkr.simplekeyboard.inputmethod.latin.settings.KeyPressSettingsFragment"
            app:widgetLayout="@layout/preference_chevron" />

        <Preference
            android:key="screen_appearance"
            android:title="@string/settings_screen_appearance"
            android:icon="@drawable/ic_palette"
            app:iconTint="?attr/colorOnSurfaceVariant"
            android:fragment="rkr.simplekeyboard.inputmethod.latin.settings.AppearanceSettingsFragment"
            app:widgetLayout="@layout/preference_chevron" />

        <Preference
            android:key="screen_advanced"
            android:title="@string/settings_screen_advanced"
            android:icon="@drawable/ic_settings_advanced"
            app:iconTint="?attr/colorOnSurfaceVariant"
            android:fragment="rkr.simplekeyboard.inputmethod.latin.settings.AdvancedSettingsFragment"
            app:widgetLayout="@layout/preference_chevron" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_about_legal">

        <Preference
            android:key="privacy_policy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_policy"
            app:iconTint="?attr/colorOnSurfaceVariant"
            app:widgetLayout="@layout/preference_external_link" />

        <Preference
            android:key="license"
            android:title="@string/license"
            android:icon="@drawable/ic_description"
            app:iconTint="?attr/colorOnSurfaceVariant"
            app:widgetLayout="@layout/preference_external_link" />


        <Preference
            android:key="version_info"
            android:title="@string/version"
            android:icon="@drawable/ic_info"
            app:iconTint="?attr/colorOnSurfaceVariant"
            app:widgetLayout="@layout/preference_external_link" />

    </PreferenceCategory>



</PreferenceScreen>
